Add create debt documentation schema
